# udoc-rs

./: .gitignore  Cargo.toml
examples/json/: Cargo.toml
examples/json/src/: main.rs
src/: common.rs  decoder.rs  encoder.rs  lib.rs  main.rs  reader.rs  utils.rs  wire_type.rs
