[package]
name = "udoc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
simple-byte-order = {version = "0.1.0", git = "https://github.com/leddoo/simple-byte-order"}
slice-reader = {version = "0.1.0", git = "https://github.com/leddoo/slice-reader"}
serde_json = {version = "1.0", features = ["preserve_order"] }

[lib]
name = "udoc"
path = "src/lib.rs"
